# fac-rs

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
ci/: run.sh
derive-struct/: Cargo.toml  README.md
derive-struct/src/: lib.rs
fac/: Cargo.toml  README.md
fac-rs/: Cargo.toml
fac-rs/src/: list.rs  main.rs  search.rs  show.rs  util.rs
fac/src/: list.rs  main.rs  search.rs  show.rs
factorio-mods-api/: Cargo.toml  README.md
factorio-mods-api/src/: api.rs  error.rs  lib.rs  types.rs  util.rs
factorio-mods-common/: Cargo.toml  README.md
factorio-mods-common/src/: lib.rs  macros.rs  types.rs  util.rs
factorio-mods-local/: Cargo.toml  README.md
factorio-mods-local/src/: api.rs  error.rs  installed_mod.rs  lib.rs  manager.rs  types.rs
factorio-mods-web/: Cargo.toml  README.md
factorio-mods-web/src/: api.rs  client.rs  error.rs  lib.rs  search.rs  types.rs  util.rs
package/: Cargo.toml
package/src/: lib.rs
src/: api.rs  cache.rs  config.rs  enable_disable.rs  install.rs  list.rs  main.rs  remove.rs  search.rs  show.rs  solve.rs  types.rs  uninstall.rs  update.rs  util.rs
src/solve/: mod.rs  web_reader.rs  zip.rs
