[package]
name = "fac"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "A CLI tool to manage Factorio mods"
edition = "2018"

[dependencies]
backtrace = "0.3"
bytes = "1"
crc32fast = "1"
dirs = "3"
factorio-mods-common = { path = "./factorio-mods-common" }
factorio-mods-local = { path = "./factorio-mods-local" }
factorio-mods-web = { path = "./factorio-mods-web" }
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
http = "0.2"
itertools = "0.10"
libflate = "1"
once_cell = "1.4"
package = { path = "./package" }
petgraph = "0.5"
regex = "1.2"
rpassword = "5"
rprompt = "1"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
textwrap = { version = "0.13", features = ["terminal_size"] }
tokio = { version = "1", features = ["macros", "rt"] }
uluru = "1"

[workspace]
