[package]
name = "fac"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]

[dependencies]
clap = "2.13.x"
factorio-mods-api = { version = "0.1.0", path = "../factorio-mods-api" }
factorio-mods-common = { version = "0.1.0", path = "../factorio-mods-common" }
factorio-mods-local = { version = "0.1.0", path = "../factorio-mods-local" }
hyper = "0.9.x"
itertools = "0.5.x"
term_size = "0.2.x"
unicode-segmentation = "0.1.x"
