[package]
name = "factorio-mods-common"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"

[dependencies]
derive-struct = { path = "../derive-struct" }
itertools = "0.9"
once_cell = "1.4"
package = { path = "../package" }
regex = "1.2"
semver = "0.10"
serde = "1"
serde_derive = "1"

[dev-dependencies]
serde_json = "1"
