[package]
name = "factorio-mods-common"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "Common types and functionality used by the factorio-mods-* crates"
edition = "2018"

[dependencies]
derive-struct = { path = "../derive-struct" }
itertools = "0.10"
once_cell = "1.4"
package = { path = "../package" }
regex = "1.2"
semver = "0.11"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
