[package]
name = "factorio-mods-common"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "Common types and functionality used by the factorio-mods-* crates"
edition = "2021"


[dependencies]
itertools = { version = "0.11", default-features = false, features = [
	"use_alloc", # for itertools::join
] }
regex = { version = "1.2", default-features = false, features = [
	"std", # "`std` feature is currently required to build this crate"
	"unicode-perl", # for \s and \d support
] }
semver = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
	"alloc", # for {String, Vec<T>}: serde::Deserialize
] }

derive-struct = { path = "../derive-struct" }
package = { path = "../package" }


[dev-dependencies]
serde_json = { version = "1", default-features = false, features = [
	"alloc", # serde_json requires either `std` or `alloc`
] }
