[package]
name = "factorio-mods-local"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
derive-struct = { path = "../derive-struct" }
dirs = "3"
factorio-mods-common = { path = "../factorio-mods-common" }
globset = "0.4"
once_cell = "1.4"
package = { path = "../package" }
semver = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
zip = "0.5"
