[package]
name = "factorio-mods-local"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "API to interface with the local Factorio installation"
edition = "2018"

[dependencies]
derive-struct = { path = "../derive-struct" }
dirs = "3"
factorio-mods-common = { path = "../factorio-mods-common" }
globset = "0.4"
once_cell = "1.4"
package = { path = "../package" }
semver = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.5"
