[package]
name = "factorio-mods-local"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "API to interface with the local Factorio installation"
edition = "2021"


[dependencies]
dirs = { version = "4", default-features = false }
globset = { version = "0.4", default-features = false }
once_cell = { version = "1.4", default-features = false, features = [
	"std", # for once_cell::sync
] }
semver = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::from_reader, serde_json::to_writer_pretty
] }
zip = { version = "0.5.7", default-features = false, features = [
	"deflate",
] }

derive-struct = { path = "../derive-struct" }
factorio-mods-common = { path = "../factorio-mods-common" }
package = { path = "../package" }
