[package]
name = "factorio-mods-web"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "API to search mods / download mods / show mod info from https://mods.factorio.com/"
edition = "2018"

[dependencies]
async-stream = "0.2"
backtrace = "0.3"
bytes = "0.5"
derive-struct = { path = "../derive-struct" }
factorio-mods-common = { path = "../factorio-mods-common" }
futures-core = "0.3"
futures-util = "0.3"
once_cell = "1.4"
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.6"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
