[package]
name = "factorio-mods-web"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "API to search mods / download mods / show mod info from https://mods.factorio.com/"
edition = "2021"

[dependencies]
async-stream = "0.3"
bytes = "1"
derive-struct = { path = "../derive-struct" }
factorio-mods-common = { path = "../factorio-mods-common" }
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyper-tls = "0.5"
once_cell = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
