[package]
name = "factorio-mods-web"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "API to search mods / download mods / show mod info from https://mods.factorio.com/"
edition = "2021"


[dependencies]
async-stream = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"client",
	"http1",
	"stream", # for hyper::Body: futures_core::Stream
] }
hyper-tls = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
	"alloc", # for {String, Vec<T>}: serde::Deserialize
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::from_reader
] }
serde_urlencoded = { version = "0.7", default-features = false }
url = { version = "2", default-features = false, features = [
	"serde",
] }

derive-struct = { path = "../derive-struct" }
factorio-mods-common = { path = "../factorio-mods-common" }


[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
	"macros",
	"rt",
] }


[lints]
workspace = true
