[package]
name = "package"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "Package solver used by fac-rs"
edition = "2021"

[dependencies]
backtrace = { version = "0.3", default-features = false }
itertools = { version = "0.10", default-features = false, features = [
	"use_std", # for itertools::sorted_by
] }
petgraph = { version = "0.6", default-features = false }
