[package]
name = "package"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
description = "Package solver used by fac-rs"
edition = "2021"

[dependencies]
itertools = { version = "0.11", default-features = false, features = [
	"use_alloc", # for itertools::Itertools::sorted_by
] }
petgraph = { version = "0.6", default-features = false }
